[package]
name = "easy_flash_cards_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
smallvec = "1.11.0"
smartstring = "1.0.1"
unicase = "2.7.0"

[dev-dependencies]
rand_chacha = "0.3.1"
