[package]
name = "easy_flash_cards_3"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
smallvec = { version = "1.11.0", features = ["serde"] }
smartstring = { version = "1.0.1", features = ["serde"] }
unicase = "2.7.0"

[dev-dependencies]
rand_chacha = "0.3.1"
