[package]
name = "efc3"
version = "0.2.0-beta.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom_locate = "4.2.0"
rand = "0.8.5"
smallvec = "1.11.0"
smartstring = "1.0.1"
unicase = "2.7.0"

[dev-dependencies]
rand_chacha = "0.3.1"
